--- a/C#/02. C# Advanced/02. Sets and Dictionaries/Ex01_Unique_Usernames/Ex01_Unique_Usernames/Ex01_Unique_Usernames.csproj
+++ b/C#/02. C# Advanced/02. Sets and Dictionaries/Ex01_Unique_Usernames/Ex01_Unique_Usernames/Ex01_Unique_Usernames.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{54014136-4AC9-42F2-B1E3-BDFFE10EA80F}</ProjectGuid>
+    <ProjectGuid>{AA0240E2-A778-4717-9A9D-1863DAE39565}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Ex6_Truck_Tour</RootNamespace>
-    <AssemblyName>Ex6_Truck_Tour</AssemblyName>
+    <RootNamespace>Ex01_Unique_Usernames</RootNamespace>
+    <AssemblyName>Ex01_Unique_Usernames</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
